# recipes

./: .gitignore  CLAUDE.md  compound-engineering.local.md  fix_descriptions.py  import_paprika.py  pyproject.toml
static/: app.js  style.css
tests/: conftest.py  test_aggregation.py  test_aisle_map.py  test_calendar.py  test_categories.py  test_cook_events.py  test_data_integrity.py  test_grocery_aggregation.py  test_grocery_lists.py  test_health.py  test_htmx_partials.py  test_import.py  test_ingredient_parser.py  test_ingredient_parser_aggregation.py  test_mcp_server.py  test_meal_plans.py  test_normalizer.py  test_pantry.py  test_pantry_matcher.py  test_paprika_import.py  test_recipes_crud.py  test_sanitize_module.py  test_scaling.py  test_search.py  test_security.py  test_web_ui.py  test_web_ui_forms.py
todos/: 001-complete-p1-mcp-test-assertions-too-loose.md  002-complete-p2-redundant-asyncio-markers.md  003-complete-p2-tests-accepting-500-need-tracking.md  004-complete-p2-mcp-db-connection-leak.md  005-complete-p2-vacuous-parser-assertion.md  006-pending-p3-weak-test-names.md  007-complete-p1-cooking-mode-css-class-mismatch.md  008-complete-p1-aisle-empty-state-broken.md  009-complete-p1-timer-dismiss-btn-unstyled.md  010-complete-p1-global-search-wasted-requests.md  011-complete-p2-htmx-lifecycle-bugs-bundle.md  012-complete-p2-yagni-tweaks-panel-density-toggles.md  013-complete-p2-dead-css-cleanup.md  014-complete-p2-layout-shift-img-dimensions.md  015-complete-p3-polish-bundle.md  016-complete-p1-list-recipes-sort-rejects-last-cooked.md  (+7 more)
(+66 files in other folders)
