[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipe-app"
version = "0.1.0"
description = "Personal recipe manager with MCP agent access"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "aiosqlite>=0.22",
    "httpx>=0.27",
    "recipe-scrapers>=15.11",
    "fastmcp==3.1.1",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "bleach>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[project.scripts]
recipe-server = "recipe_app.main:run"
recipe-mcp = "recipe_app.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
